<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="Shoes Image"
        android:background="@drawable/grey_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoes" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cart_item_title_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/itemImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_item_price_text"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_item_price_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleTxt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/grey_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/minusBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="2dp"
            android:background="@drawable/white_background"
            android:gravity="center"
            android:text="@string/cart_item_minus_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/plusBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="2dp"
            android:background="@drawable/purple_background"
            android:gravity="center"
            android:text="@string/cart_item_plus_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_item_quantity_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plusBtn"
            app:layout_constraintStart_toEndOf="@+id/minusBtn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>